fix(orchestration): move JDBC config to portal-ext and disable HSQL fallback